// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`spec/Icon renders [EMPTY] 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="center"
    border={null}
    colors={null}
    direction={null}
    events={null}
    flex={null}
    href={null}
    isDisabled={null}
    isHidden={null}
    justify="center"
    margin={null}
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={null}
    padding={null}
    shadow={null}
    shape={null}
    state={null}
    style={
      [
        {
          "minHeight": 30,
          "minWidth": 30,
        },
        null,
      ]
    }
    testId={null}
  >
    <test-mock
      color="#62b9fa"
      name="star"
      size={18}
      style={
        [
          {
            "lineHeight": 30,
            "minHeight": 30,
            "minWidth": 30,
            "textAlign": "center",
          },
          false,
          null,
        ]
      }
    />
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 03fe7e8152 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="baseline"
    border="xlg.bottom"
    colors={null}
    direction={null}
    events={null}
    flex={null}
    href="https://google.com"
    isDisabled={false}
    isHidden={false}
    justify="space-around"
    margin="1 2 3 4"
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={0}
    padding="1 2 3 4"
    shadow={null}
    shape="rounded.bottom"
    state="hover"
    style={
      [
        {
          "minHeight": 30,
          "minWidth": 30,
        },
        {
          "position": "absolute",
        },
      ]
    }
    testId={null}
  >
    <svg
      color="#443a6e"
      css={
        {
          "map": undefined,
          "name": "1qscsn4",
          "next": {
            "name": "animation-1xnn55h",
            "next": undefined,
            "styles": "@keyframes animation-1xnn55h{
    from {
        transform: rotate(0deg);
    }
  
    to {
        transform: rotate(720deg);
    }
}",
          },
          "styles": "
    animation: animation-1xnn55h 2s infinite;
",
          "toString": [Function],
        }
      }
      fill="currentColor"
      height={30}
      stroke="currentColor"
      strokeWidth="0"
      style={
        {
          "color": "#443a6e",
        }
      }
      viewBox="0 0 16 16"
      width={30}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M13.917 7A6.002 6.002 0 0 0 2.083 7H1.071a7.002 7.002 0 0 1 13.858 0h-1.012z"
        fillRule="evenodd"
      />
    </svg>
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 04d184d6e2 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="flex-end"
    border="md"
    colors={
      {
        "bg": "transparent",
        "bgActive": "transparent",
        "bgHover": "transparent",
        "border": "bg.success",
        "borderActive": "bg.successminus",
        "borderHover": "bg.successplus",
        "text": "text.success",
        "textActive": "text.successminus",
        "textHover": "text.successplus",
      }
    }
    direction="column-reverse"
    events="auto"
    flex={2}
    href="https://google.com"
    isDisabled={false}
    isHidden={false}
    justify="center"
    margin={null}
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={0.5}
    padding={null}
    shadow="lg"
    shape="lg"
    state="hover"
    style={
      [
        {
          "minHeight": 30,
          "minWidth": 30,
        },
        {
          "position": "absolute",
        },
      ]
    }
    testId=""
  >
    <test-mock
      color="#7d0fad"
      name="star"
      size={30}
      style={
        [
          {
            "lineHeight": 30,
            "minHeight": 30,
            "minWidth": 30,
            "textAlign": "center",
          },
          {
            "transform": [
              {
                "rotate": "90deg",
              },
            ],
          },
          {
            "padding": 0,
            "textShadowColor": "cyan",
            "textShadowOffset": {
              "height": 0,
              "width": 0,
            },
            "textShadowRadius": 2,
          },
        ]
      }
    />
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 05fff6920e 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="flex-start"
    border="sm.right"
    colors={null}
    direction={null}
    events={null}
    flex={null}
    href=""
    isDisabled={true}
    isHidden={true}
    justify="space-between"
    margin="5 15 3"
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={0}
    padding="5 15 3"
    shadow={null}
    shape="md.right"
    state="active"
    style={
      [
        {
          "minHeight": 40,
          "minWidth": 40,
        },
        {
          "width": 100,
        },
      ]
    }
    testId={null}
  >
    <svg
      color="#c808df"
      css={
        {
          "map": undefined,
          "name": "1qscsn4",
          "next": {
            "name": "animation-1xnn55h",
            "next": undefined,
            "styles": "@keyframes animation-1xnn55h{
    from {
        transform: rotate(0deg);
    }
  
    to {
        transform: rotate(720deg);
    }
}",
          },
          "styles": "
    animation: animation-1xnn55h 2s infinite;
",
          "toString": [Function],
        }
      }
      fill="currentColor"
      height={20}
      stroke="currentColor"
      strokeWidth="0"
      style={
        {
          "color": "#c808df",
        }
      }
      viewBox="0 0 16 16"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M13.917 7A6.002 6.002 0 0 0 2.083 7H1.071a7.002 7.002 0 0 1 13.858 0h-1.012z"
        fillRule="evenodd"
      />
    </svg>
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 07a0da105 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="center"
    border="sm.left"
    colors={
      {
        "bg": "transparent",
        "bgActive": "transparent",
        "bgHover": "transparent",
        "border": "bg.success",
        "borderActive": "bg.successminus",
        "borderHover": "bg.successplus",
        "text": "text.success",
        "textActive": "text.successminus",
        "textHover": "text.successplus",
      }
    }
    direction="column-reverse"
    events="auto"
    flex={2}
    href={null}
    isDisabled={null}
    isHidden={null}
    justify="center"
    margin="5 15"
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={null}
    padding="5 15"
    shadow="lg"
    shape="md.left"
    state={null}
    style={
      [
        {
          "minHeight": 35,
          "minWidth": 35,
        },
        null,
      ]
    }
    testId=""
  >
    <test-mock
      color="#63eb72"
      name="star"
      size={18}
      style={
        [
          {
            "lineHeight": 35,
            "minHeight": 35,
            "minWidth": 35,
            "textAlign": "center",
          },
          false,
          null,
        ]
      }
    />
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 013ee63919 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="baseline"
    border="xlg.all"
    colors={
      {
        "bg": "transparent",
        "bgActive": "transparent",
        "bgHover": "transparent",
        "border": "bg.success",
        "borderActive": "bg.successminus",
        "borderHover": "bg.successplus",
        "text": "text.success",
        "textActive": "text.successminus",
        "textHover": "text.successplus",
      }
    }
    direction="column-reverse"
    events="auto"
    flex={2}
    href="https://google.com"
    isDisabled={false}
    isHidden={false}
    justify="flex-start"
    margin={0}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={0}
    padding={0}
    shadow="lg"
    shape="sm.bottom"
    state="hover"
    style={
      [
        {
          "minHeight": 15,
          "minWidth": 15,
        },
        {
          "position": "absolute",
        },
      ]
    }
    testId=""
  >
    <svg
      color="#7d0fad"
      css={
        {
          "map": undefined,
          "name": "1qscsn4",
          "next": {
            "name": "animation-1xnn55h",
            "next": undefined,
            "styles": "@keyframes animation-1xnn55h{
    from {
        transform: rotate(0deg);
    }
  
    to {
        transform: rotate(720deg);
    }
}",
          },
          "styles": "
    animation: animation-1xnn55h 2s infinite;
",
          "toString": [Function],
        }
      }
      fill="currentColor"
      height={30}
      stroke="currentColor"
      strokeWidth="0"
      style={
        {
          "color": "#7d0fad",
        }
      }
      viewBox="0 0 16 16"
      width={30}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M13.917 7A6.002 6.002 0 0 0 2.083 7H1.071a7.002 7.002 0 0 1 13.858 0h-1.012z"
        fillRule="evenodd"
      />
    </svg>
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 018f7d08c2 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="flex-start"
    border="xlg.right"
    colors="accenttext"
    direction="row-reverse"
    events="none"
    flex={0}
    href=""
    isDisabled={true}
    isHidden={true}
    justify="center"
    margin={null}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={1}
    padding={null}
    shadow="sm"
    shape="rounded.right"
    state="active"
    style={
      [
        {
          "minHeight": 40,
          "minWidth": 40,
        },
        {
          "width": 100,
        },
      ]
    }
    testId="button-name"
  >
    <svg
      color="#714c40"
      css={
        {
          "map": undefined,
          "name": "1qscsn4",
          "next": {
            "name": "animation-1xnn55h",
            "next": undefined,
            "styles": "@keyframes animation-1xnn55h{
    from {
        transform: rotate(0deg);
    }
  
    to {
        transform: rotate(720deg);
    }
}",
          },
          "styles": "
    animation: animation-1xnn55h 2s infinite;
",
          "toString": [Function],
        }
      }
      fill="currentColor"
      height={20}
      stroke="currentColor"
      strokeWidth="0"
      style={
        {
          "color": "#714c40",
        }
      }
      viewBox="0 0 16 16"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M13.917 7A6.002 6.002 0 0 0 2.083 7H1.071a7.002 7.002 0 0 1 13.858 0h-1.012z"
        fillRule="evenodd"
      />
    </svg>
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 032aeb01e7 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="flex-start"
    border="md.right"
    colors={
      {
        "bg": "transparent",
        "bgActive": "transparent",
        "bgHover": "transparent",
        "border": "bg.success",
        "borderActive": "bg.successminus",
        "borderHover": "bg.successplus",
        "text": "text.success",
        "textActive": "text.successminus",
        "textHover": "text.successplus",
      }
    }
    direction="column-reverse"
    events="auto"
    flex={2}
    href=""
    isDisabled={true}
    isHidden={true}
    justify="space-around"
    margin="1 2 3 4"
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={1}
    padding="1 2 3 4"
    shadow="lg"
    shape="lg.right"
    state="active"
    style={
      [
        {
          "minHeight": undefined,
          "minWidth": undefined,
        },
        {
          "width": 100,
        },
      ]
    }
    testId=""
  >
    <svg
      color="#ed22c9"
      css={
        {
          "map": undefined,
          "name": "1qscsn4",
          "next": {
            "name": "animation-1xnn55h",
            "next": undefined,
            "styles": "@keyframes animation-1xnn55h{
    from {
        transform: rotate(0deg);
    }
  
    to {
        transform: rotate(720deg);
    }
}",
          },
          "styles": "
    animation: animation-1xnn55h 2s infinite;
",
          "toString": [Function],
        }
      }
      fill="currentColor"
      height={20}
      stroke="currentColor"
      strokeWidth="0"
      style={
        {
          "color": "#ed22c9",
        }
      }
      viewBox="0 0 16 16"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M13.917 7A6.002 6.002 0 0 0 2.083 7H1.071a7.002 7.002 0 0 1 13.858 0h-1.012z"
        fillRule="evenodd"
      />
    </svg>
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 04521728c 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="center"
    border="xlg.top"
    colors={null}
    direction={null}
    events={null}
    flex={null}
    href={null}
    isDisabled={null}
    isHidden={null}
    justify="flex-end"
    margin={10}
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={0.5}
    padding={10}
    shadow={null}
    shape="sm.left"
    state={null}
    style={
      [
        {
          "minHeight": 20,
          "minWidth": 20,
        },
        null,
      ]
    }
    testId={null}
  >
    <test-mock
      color="#62b9fa"
      name="star"
      size={18}
      style={
        [
          {
            "lineHeight": 20,
            "minHeight": 20,
            "minWidth": 20,
            "textAlign": "center",
          },
          false,
          {
            "padding": 0,
            "textShadowColor": "cyan",
            "textShadowOffset": {
              "height": 0,
              "width": 0,
            },
            "textShadowRadius": 2,
          },
        ]
      }
    />
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 0a9de52cc9 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="flex-end"
    border="xlg"
    colors="accenttext"
    direction="row-reverse"
    events="none"
    flex={0}
    href="https://google.com"
    isDisabled={false}
    isHidden={false}
    justify="flex-end"
    margin={10}
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={0.5}
    padding={10}
    shadow="sm"
    shape="rounded"
    state="hover"
    style={
      [
        {
          "minHeight": 15,
          "minWidth": 15,
        },
        {
          "position": "absolute",
        },
      ]
    }
    testId="button-name"
  >
    <test-mock
      color="#75d9cf"
      name="button-name"
      size={30}
      style={
        [
          {
            "lineHeight": 15,
            "minHeight": 15,
            "minWidth": 15,
            "textAlign": "center",
          },
          {
            "transform": [
              {
                "rotate": "90deg",
              },
            ],
          },
          {
            "padding": 0,
            "textShadowColor": "cyan",
            "textShadowOffset": {
              "height": 0,
              "width": 0,
            },
            "textShadowRadius": 2,
          },
        ]
      }
    />
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 0ce9415ff0 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="center"
    border="lg.all"
    colors={
      {
        "bg": "transparent",
        "bgActive": "transparent",
        "bgHover": "transparent",
        "border": "bg.success",
        "borderActive": "bg.successminus",
        "borderHover": "bg.successplus",
        "text": "text.success",
        "textActive": "text.successminus",
        "textHover": "text.successplus",
      }
    }
    direction="column-reverse"
    events="auto"
    flex={2}
    href={null}
    isDisabled={null}
    isHidden={null}
    justify="flex-end"
    margin={10}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={0}
    padding={10}
    shadow="lg"
    shape="xlg.all"
    state={null}
    style={
      [
        {
          "minHeight": 30,
          "minWidth": 30,
        },
        null,
      ]
    }
    testId=""
  >
    <svg
      color="#63eb72"
      css={
        {
          "map": undefined,
          "name": "1qscsn4",
          "next": {
            "name": "animation-1xnn55h",
            "next": undefined,
            "styles": "@keyframes animation-1xnn55h{
    from {
        transform: rotate(0deg);
    }
  
    to {
        transform: rotate(720deg);
    }
}",
          },
          "styles": "
    animation: animation-1xnn55h 2s infinite;
",
          "toString": [Function],
        }
      }
      fill="currentColor"
      height={18}
      stroke="currentColor"
      strokeWidth="0"
      style={
        {
          "color": "#63eb72",
        }
      }
      viewBox="0 0 16 16"
      width={18}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M13.917 7A6.002 6.002 0 0 0 2.083 7H1.071a7.002 7.002 0 0 1 13.858 0h-1.012z"
        fillRule="evenodd"
      />
    </svg>
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 0d4890b90f 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="baseline"
    border="sm.bottom"
    colors={
      {
        "bg": "bg.primaryalt",
        "bgActive": "bg.primaryaltminus",
        "bgHover": "bg.primaryaltplus",
        "border": "transparent",
        "borderActive": "transparent",
        "borderHover": "transparent",
        "text": "text.primary",
        "textActive": "text.primaryminus",
        "textHover": "text.primaryplus",
      }
    }
    direction="column"
    events="box-only"
    flex={1}
    href="https://google.com"
    isDisabled={false}
    isHidden={false}
    justify="flex-end"
    margin={10}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={1}
    padding={10}
    shadow="md"
    shape="md.bottom"
    state="hover"
    style={
      [
        {
          "minHeight": 30,
          "minWidth": 30,
        },
        {
          "position": "absolute",
        },
      ]
    }
    testId="Label"
  >
    <svg
      color="#fcc58f"
      css={
        {
          "map": undefined,
          "name": "1qscsn4",
          "next": {
            "name": "animation-1xnn55h",
            "next": undefined,
            "styles": "@keyframes animation-1xnn55h{
    from {
        transform: rotate(0deg);
    }
  
    to {
        transform: rotate(720deg);
    }
}",
          },
          "styles": "
    animation: animation-1xnn55h 2s infinite;
",
          "toString": [Function],
        }
      }
      fill="currentColor"
      height={30}
      stroke="currentColor"
      strokeWidth="0"
      style={
        {
          "color": "#fcc58f",
        }
      }
      viewBox="0 0 16 16"
      width={30}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M13.917 7A6.002 6.002 0 0 0 2.083 7H1.071a7.002 7.002 0 0 1 13.858 0h-1.012z"
        fillRule="evenodd"
      />
    </svg>
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 0d68539a08 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="flex-start"
    border="xlg.bottom"
    colors="secondary"
    direction="row"
    events="box-none"
    flex={-1}
    href=""
    isDisabled={true}
    isHidden={true}
    justify="center"
    margin="5 15"
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={1}
    padding="5 15"
    shadow="none"
    shape="sm.right"
    state="active"
    style={
      [
        {
          "minHeight": 25,
          "minWidth": 25,
        },
        {
          "width": 100,
        },
      ]
    }
    testId="test-id"
  >
    <svg
      color="#bad252"
      css={
        {
          "map": undefined,
          "name": "1qscsn4",
          "next": {
            "name": "animation-1xnn55h",
            "next": undefined,
            "styles": "@keyframes animation-1xnn55h{
    from {
        transform: rotate(0deg);
    }
  
    to {
        transform: rotate(720deg);
    }
}",
          },
          "styles": "
    animation: animation-1xnn55h 2s infinite;
",
          "toString": [Function],
        }
      }
      fill="currentColor"
      height={20}
      stroke="currentColor"
      strokeWidth="0"
      style={
        {
          "color": "#bad252",
        }
      }
      viewBox="0 0 16 16"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M13.917 7A6.002 6.002 0 0 0 2.083 7H1.071a7.002 7.002 0 0 1 13.858 0h-1.012z"
        fillRule="evenodd"
      />
    </svg>
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 1ac18fa5 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="center"
    border="none"
    colors="accenttext"
    direction="row-reverse"
    events="none"
    flex={0}
    href={null}
    isDisabled={null}
    isHidden={null}
    justify="space-evenly"
    margin="-1 -2 -3 -4"
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={1}
    padding="-1 -2 -3 -4"
    shadow="sm"
    shape="sm.all"
    state={null}
    style={
      [
        {
          "minHeight": 30,
          "minWidth": 30,
        },
        null,
      ]
    }
    testId="button-name"
  >
    <svg
      color="#979d8c"
      css={
        {
          "map": undefined,
          "name": "1qscsn4",
          "next": {
            "name": "animation-1xnn55h",
            "next": undefined,
            "styles": "@keyframes animation-1xnn55h{
    from {
        transform: rotate(0deg);
    }
  
    to {
        transform: rotate(720deg);
    }
}",
          },
          "styles": "
    animation: animation-1xnn55h 2s infinite;
",
          "toString": [Function],
        }
      }
      fill="currentColor"
      height={18}
      stroke="currentColor"
      strokeWidth="0"
      style={
        {
          "color": "#979d8c",
        }
      }
      viewBox="0 0 16 16"
      width={18}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M13.917 7A6.002 6.002 0 0 0 2.083 7H1.071a7.002 7.002 0 0 1 13.858 0h-1.012z"
        fillRule="evenodd"
      />
    </svg>
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 1ae9014ab 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="center"
    border="lg.left"
    colors="accenttext"
    direction="row-reverse"
    events="none"
    flex={0}
    href={null}
    isDisabled={null}
    isHidden={null}
    justify="space-around"
    margin="1 2 3 4"
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={null}
    padding="1 2 3 4"
    shadow="sm"
    shape="xlg.left"
    state={null}
    style={
      [
        {
          "minHeight": 20,
          "minWidth": 20,
        },
        null,
      ]
    }
    testId="button-name"
  >
    <test-mock
      color="#979d8c"
      name="button-name"
      size={18}
      style={
        [
          {
            "lineHeight": 20,
            "minHeight": 20,
            "minWidth": 20,
            "textAlign": "center",
          },
          false,
          null,
        ]
      }
    />
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 1d4c894ad 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="flex-end"
    border="lg"
    colors={
      {
        "bg": "bg.primaryalt",
        "bgActive": "bg.primaryaltminus",
        "bgHover": "bg.primaryaltplus",
        "border": "transparent",
        "borderActive": "transparent",
        "borderHover": "transparent",
        "text": "text.primary",
        "textActive": "text.primaryminus",
        "textHover": "text.primaryplus",
      }
    }
    direction="column"
    events="box-only"
    flex={1}
    href="https://google.com"
    isDisabled={false}
    isHidden={false}
    justify="flex-start"
    margin={0}
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={null}
    padding={0}
    shadow="md"
    shape="xlg"
    state="hover"
    style={
      [
        {
          "minHeight": 45,
          "minWidth": 45,
        },
        {
          "position": "absolute",
        },
      ]
    }
    testId="Label"
  >
    <test-mock
      color="#fcc58f"
      name="Label"
      size={30}
      style={
        [
          {
            "lineHeight": 45,
            "minHeight": 45,
            "minWidth": 45,
            "textAlign": "center",
          },
          {
            "transform": [
              {
                "rotate": "90deg",
              },
            ],
          },
          null,
        ]
      }
    />
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 2bc9c6d00 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="flex-end"
    border="sm"
    colors={null}
    direction={null}
    events={null}
    flex={null}
    href="https://google.com"
    isDisabled={false}
    isHidden={false}
    justify="space-evenly"
    margin="-1 -2 -3 -4"
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={null}
    padding="-1 -2 -3 -4"
    shadow={null}
    shape="md"
    state="hover"
    style={
      [
        {
          "minHeight": 15,
          "minWidth": 15,
        },
        {
          "position": "absolute",
        },
      ]
    }
    testId={null}
  >
    <test-mock
      color="#443a6e"
      name="star"
      size={30}
      style={
        [
          {
            "lineHeight": 15,
            "minHeight": 15,
            "minWidth": 15,
            "textAlign": "center",
          },
          {
            "transform": [
              {
                "rotate": "90deg",
              },
            ],
          },
          null,
        ]
      }
    />
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 2c10c7a20 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="center"
    border="xlg.all"
    colors={
      {
        "bg": "bg.primaryalt",
        "bgActive": "bg.primaryaltminus",
        "bgHover": "bg.primaryaltplus",
        "border": "transparent",
        "borderActive": "transparent",
        "borderHover": "transparent",
        "text": "text.primary",
        "textActive": "text.primaryminus",
        "textHover": "text.primaryplus",
      }
    }
    direction="column"
    events="box-only"
    flex={1}
    href={null}
    isDisabled={null}
    isHidden={null}
    justify="center"
    margin="5 15"
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={1}
    padding="5 15"
    shadow="md"
    shape="rounded.all"
    state={null}
    style={
      [
        {
          "minHeight": 20,
          "minWidth": 20,
        },
        null,
      ]
    }
    testId="Label"
  >
    <svg
      color="#62b9fa"
      css={
        {
          "map": undefined,
          "name": "1qscsn4",
          "next": {
            "name": "animation-1xnn55h",
            "next": undefined,
            "styles": "@keyframes animation-1xnn55h{
    from {
        transform: rotate(0deg);
    }
  
    to {
        transform: rotate(720deg);
    }
}",
          },
          "styles": "
    animation: animation-1xnn55h 2s infinite;
",
          "toString": [Function],
        }
      }
      fill="currentColor"
      height={18}
      stroke="currentColor"
      strokeWidth="0"
      style={
        {
          "color": "#62b9fa",
        }
      }
      viewBox="0 0 16 16"
      width={18}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M13.917 7A6.002 6.002 0 0 0 2.083 7H1.071a7.002 7.002 0 0 1 13.858 0h-1.012z"
        fillRule="evenodd"
      />
    </svg>
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 2cee95802 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="flex-end"
    border={null}
    colors="secondary"
    direction="row"
    events="box-none"
    flex={-1}
    href="https://google.com"
    isDisabled={false}
    isHidden={false}
    justify="space-around"
    margin="1 2 3 4"
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={0.5}
    padding="1 2 3 4"
    shadow="none"
    shape="sm"
    state="hover"
    style={
      [
        {
          "minHeight": 45,
          "minWidth": 45,
        },
        {
          "position": "absolute",
        },
      ]
    }
    testId="test-id"
  >
    <test-mock
      color="#3695db"
      name="test-id"
      size={30}
      style={
        [
          {
            "lineHeight": 45,
            "minHeight": 45,
            "minWidth": 45,
            "textAlign": "center",
          },
          {
            "transform": [
              {
                "rotate": "90deg",
              },
            ],
          },
          {
            "padding": 0,
            "textShadowColor": "cyan",
            "textShadowOffset": {
              "height": 0,
              "width": 0,
            },
            "textShadowRadius": 2,
          },
        ]
      }
    />
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 5ce35bfdc 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="stretch"
    border="sm.top"
    colors="accenttext"
    direction="row-reverse"
    events="none"
    flex={0}
    href=""
    isDisabled={true}
    isHidden={true}
    justify="flex-start"
    margin={0}
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={0.5}
    padding={0}
    shadow="sm"
    shape="md.top"
    state="active"
    style={
      [
        {
          "minHeight": 25,
          "minWidth": 25,
        },
        {
          "width": 100,
        },
      ]
    }
    testId="button-name"
  >
    <test-mock
      color="#714c40"
      name="button-name"
      size={20}
      style={
        [
          {
            "lineHeight": 25,
            "minHeight": 25,
            "minWidth": 25,
            "textAlign": "center",
          },
          {
            "transform": [
              {
                "rotate": "45deg",
              },
            ],
          },
          {
            "padding": 0,
            "textShadowColor": "cyan",
            "textShadowOffset": {
              "height": 0,
              "width": 0,
            },
            "textShadowRadius": 2,
          },
        ]
      }
    />
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 6dd5214ed 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="center"
    border="md.all"
    colors={null}
    direction={null}
    events={null}
    flex={null}
    href={null}
    isDisabled={null}
    isHidden={null}
    justify="flex-start"
    margin={0}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={1}
    padding={0}
    shadow={null}
    shape="lg.all"
    state={null}
    style={
      [
        {
          "minHeight": 35,
          "minWidth": 35,
        },
        null,
      ]
    }
    testId={null}
  >
    <svg
      color="#62b9fa"
      css={
        {
          "map": undefined,
          "name": "1qscsn4",
          "next": {
            "name": "animation-1xnn55h",
            "next": undefined,
            "styles": "@keyframes animation-1xnn55h{
    from {
        transform: rotate(0deg);
    }
  
    to {
        transform: rotate(720deg);
    }
}",
          },
          "styles": "
    animation: animation-1xnn55h 2s infinite;
",
          "toString": [Function],
        }
      }
      fill="currentColor"
      height={18}
      stroke="currentColor"
      strokeWidth="0"
      style={
        {
          "color": "#62b9fa",
        }
      }
      viewBox="0 0 16 16"
      width={18}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M13.917 7A6.002 6.002 0 0 0 2.083 7H1.071a7.002 7.002 0 0 1 13.858 0h-1.012z"
        fillRule="evenodd"
      />
    </svg>
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 8f5f237f2 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="flex-start"
    border="lg.right"
    colors={
      {
        "bg": "bg.primaryalt",
        "bgActive": "bg.primaryaltminus",
        "bgHover": "bg.primaryaltplus",
        "border": "transparent",
        "borderActive": "transparent",
        "borderHover": "transparent",
        "text": "text.primary",
        "textActive": "text.primaryminus",
        "textHover": "text.primaryplus",
      }
    }
    direction="column"
    events="box-only"
    flex={1}
    href=""
    isDisabled={true}
    isHidden={true}
    justify="space-evenly"
    margin="-1 -2 -3 -4"
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={0}
    padding="-1 -2 -3 -4"
    shadow="md"
    shape="xlg.right"
    state="active"
    style={
      [
        {
          "minHeight": 25,
          "minWidth": 25,
        },
        {
          "width": 100,
        },
      ]
    }
    testId="Label"
  >
    <svg
      color="#4e3c3d"
      css={
        {
          "map": undefined,
          "name": "1qscsn4",
          "next": {
            "name": "animation-1xnn55h",
            "next": undefined,
            "styles": "@keyframes animation-1xnn55h{
    from {
        transform: rotate(0deg);
    }
  
    to {
        transform: rotate(720deg);
    }
}",
          },
          "styles": "
    animation: animation-1xnn55h 2s infinite;
",
          "toString": [Function],
        }
      }
      fill="currentColor"
      height={20}
      stroke="currentColor"
      strokeWidth="0"
      style={
        {
          "color": "#4e3c3d",
        }
      }
      viewBox="0 0 16 16"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M13.917 7A6.002 6.002 0 0 0 2.083 7H1.071a7.002 7.002 0 0 1 13.858 0h-1.012z"
        fillRule="evenodd"
      />
    </svg>
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 14ab8cdda 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="stretch"
    border="xlg"
    colors={
      {
        "bg": "bg.primaryalt",
        "bgActive": "bg.primaryaltminus",
        "bgHover": "bg.primaryaltplus",
        "border": "transparent",
        "borderActive": "transparent",
        "borderHover": "transparent",
        "text": "text.primary",
        "textActive": "text.primaryminus",
        "textHover": "text.primaryplus",
      }
    }
    direction="column"
    events="box-only"
    flex={1}
    href=""
    isDisabled={true}
    isHidden={true}
    justify="center"
    margin={null}
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={null}
    padding={null}
    shadow="md"
    shape="sm.top"
    state="active"
    style={
      [
        {
          "minHeight": undefined,
          "minWidth": undefined,
        },
        {
          "width": 100,
        },
      ]
    }
    testId="Label"
  >
    <test-mock
      color="#4e3c3d"
      name="Label"
      size={20}
      style={
        [
          {
            "lineHeight": undefined,
            "minHeight": undefined,
            "minWidth": undefined,
            "textAlign": "center",
          },
          {
            "transform": [
              {
                "rotate": "45deg",
              },
            ],
          },
          null,
        ]
      }
    />
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 25d80dec4 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="center"
    border="md.left"
    colors={
      {
        "bg": "bg.primaryalt",
        "bgActive": "bg.primaryaltminus",
        "bgHover": "bg.primaryaltplus",
        "border": "transparent",
        "borderActive": "transparent",
        "borderHover": "transparent",
        "text": "text.primary",
        "textActive": "text.primaryminus",
        "textHover": "text.primaryplus",
      }
    }
    direction="column"
    events="box-only"
    flex={1}
    href={null}
    isDisabled={null}
    isHidden={null}
    justify="space-between"
    margin="5 15 3"
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={0.5}
    padding="5 15 3"
    shadow="md"
    shape="lg.left"
    state={null}
    style={
      [
        {
          "minHeight": 30,
          "minWidth": 30,
        },
        null,
      ]
    }
    testId="Label"
  >
    <test-mock
      color="#62b9fa"
      name="Label"
      size={18}
      style={
        [
          {
            "lineHeight": 30,
            "minHeight": 30,
            "minWidth": 30,
            "textAlign": "center",
          },
          false,
          {
            "padding": 0,
            "textShadowColor": "cyan",
            "textShadowOffset": {
              "height": 0,
              "width": 0,
            },
            "textShadowRadius": 2,
          },
        ]
      }
    />
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 29f5fcc86 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="stretch"
    border="md.top"
    colors="secondary"
    direction="row"
    events="box-none"
    flex={-1}
    href=""
    isDisabled={true}
    isHidden={true}
    justify="flex-end"
    margin={10}
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={null}
    padding={10}
    shadow="none"
    shape="lg.top"
    state="active"
    style={
      [
        {
          "minHeight": 40,
          "minWidth": 40,
        },
        {
          "width": 100,
        },
      ]
    }
    testId="test-id"
  >
    <test-mock
      color="#bad252"
      name="test-id"
      size={20}
      style={
        [
          {
            "lineHeight": 40,
            "minHeight": 40,
            "minWidth": 40,
            "textAlign": "center",
          },
          {
            "transform": [
              {
                "rotate": "45deg",
              },
            ],
          },
          null,
        ]
      }
    />
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 158f7cfa3 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="stretch"
    border="lg.top"
    colors={null}
    direction={null}
    events={null}
    flex={null}
    href=""
    isDisabled={true}
    isHidden={true}
    justify="center"
    margin="5 15"
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={0.5}
    padding="5 15"
    shadow={null}
    shape="xlg.top"
    state="active"
    style={
      [
        {
          "minHeight": undefined,
          "minWidth": undefined,
        },
        {
          "width": 100,
        },
      ]
    }
    testId={null}
  >
    <test-mock
      color="#c808df"
      name="star"
      size={20}
      style={
        [
          {
            "lineHeight": undefined,
            "minHeight": undefined,
            "minWidth": undefined,
            "textAlign": "center",
          },
          {
            "transform": [
              {
                "rotate": "45deg",
              },
            ],
          },
          {
            "padding": 0,
            "textShadowColor": "cyan",
            "textShadowOffset": {
              "height": 0,
              "width": 0,
            },
            "textShadowRadius": 2,
          },
        ]
      }
    />
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 644f4f860 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="flex-start"
    border="none"
    colors="secondary"
    direction="row"
    events="box-none"
    flex={-1}
    href=""
    isDisabled={true}
    isHidden={true}
    justify="flex-start"
    margin={0}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={0}
    padding={0}
    shadow="none"
    shape="none"
    state="active"
    style={
      [
        {
          "minHeight": undefined,
          "minWidth": undefined,
        },
        {
          "width": 100,
        },
      ]
    }
    testId="test-id"
  >
    <svg
      color="#bad252"
      css={
        {
          "map": undefined,
          "name": "1qscsn4",
          "next": {
            "name": "animation-1xnn55h",
            "next": undefined,
            "styles": "@keyframes animation-1xnn55h{
    from {
        transform: rotate(0deg);
    }
  
    to {
        transform: rotate(720deg);
    }
}",
          },
          "styles": "
    animation: animation-1xnn55h 2s infinite;
",
          "toString": [Function],
        }
      }
      fill="currentColor"
      height={20}
      stroke="currentColor"
      strokeWidth="0"
      style={
        {
          "color": "#bad252",
        }
      }
      viewBox="0 0 16 16"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M13.917 7A6.002 6.002 0 0 0 2.083 7H1.071a7.002 7.002 0 0 1 13.858 0h-1.012z"
        fillRule="evenodd"
      />
    </svg>
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 16198ba0b 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="baseline"
    border="md.bottom"
    colors="accenttext"
    direction="row-reverse"
    events="none"
    flex={0}
    href="https://google.com"
    isDisabled={false}
    isHidden={false}
    justify="center"
    margin="5 15"
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={0}
    padding="5 15"
    shadow="sm"
    shape="lg.bottom"
    state="hover"
    style={
      [
        {
          "minHeight": 45,
          "minWidth": 45,
        },
        {
          "position": "absolute",
        },
      ]
    }
    testId="button-name"
  >
    <svg
      color="#75d9cf"
      css={
        {
          "map": undefined,
          "name": "1qscsn4",
          "next": {
            "name": "animation-1xnn55h",
            "next": undefined,
            "styles": "@keyframes animation-1xnn55h{
    from {
        transform: rotate(0deg);
    }
  
    to {
        transform: rotate(720deg);
    }
}",
          },
          "styles": "
    animation: animation-1xnn55h 2s infinite;
",
          "toString": [Function],
        }
      }
      fill="currentColor"
      height={30}
      stroke="currentColor"
      strokeWidth="0"
      style={
        {
          "color": "#75d9cf",
        }
      }
      viewBox="0 0 16 16"
      width={30}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M13.917 7A6.002 6.002 0 0 0 2.083 7H1.071a7.002 7.002 0 0 1 13.858 0h-1.012z"
        fillRule="evenodd"
      />
    </svg>
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 20978cc23 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="center"
    border="xlg.left"
    colors="secondary"
    direction="row"
    events="box-none"
    flex={-1}
    href={null}
    isDisabled={null}
    isHidden={null}
    justify="space-evenly"
    margin="-1 -2 -3 -4"
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={0.5}
    padding="-1 -2 -3 -4"
    shadow="none"
    shape="rounded.left"
    state={null}
    style={
      [
        {
          "minHeight": 35,
          "minWidth": 35,
        },
        null,
      ]
    }
    testId="test-id"
  >
    <test-mock
      color="#d4c444"
      name="test-id"
      size={18}
      style={
        [
          {
            "lineHeight": 35,
            "minHeight": 35,
            "minWidth": 35,
            "textAlign": "center",
          },
          false,
          {
            "padding": 0,
            "textShadowColor": "cyan",
            "textShadowOffset": {
              "height": 0,
              "width": 0,
            },
            "textShadowRadius": 2,
          },
        ]
      }
    />
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders 268600df1 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="center"
    border="sm.all"
    colors="secondary"
    direction="row"
    events="box-none"
    flex={-1}
    href={null}
    isDisabled={null}
    isHidden={null}
    justify="center"
    margin={null}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={0}
    padding={null}
    shadow="none"
    shape="md.all"
    state={null}
    style={
      [
        {
          "minHeight": 20,
          "minWidth": 20,
        },
        null,
      ]
    }
    testId="test-id"
  >
    <svg
      color="#d4c444"
      css={
        {
          "map": undefined,
          "name": "1qscsn4",
          "next": {
            "name": "animation-1xnn55h",
            "next": undefined,
            "styles": "@keyframes animation-1xnn55h{
    from {
        transform: rotate(0deg);
    }
  
    to {
        transform: rotate(720deg);
    }
}",
          },
          "styles": "
    animation: animation-1xnn55h 2s infinite;
",
          "toString": [Function],
        }
      }
      fill="currentColor"
      height={18}
      stroke="currentColor"
      strokeWidth="0"
      style={
        {
          "color": "#d4c444",
        }
      }
      viewBox="0 0 16 16"
      width={18}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M13.917 7A6.002 6.002 0 0 0 2.083 7H1.071a7.002 7.002 0 0 1 13.858 0h-1.012z"
        fillRule="evenodd"
      />
    </svg>
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders a5839f2e8 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="baseline"
    border="lg.bottom"
    colors="secondary"
    direction="row"
    events="box-none"
    flex={-1}
    href="https://google.com"
    isDisabled={false}
    isHidden={false}
    justify="space-between"
    margin="5 15 3"
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={1}
    padding="5 15 3"
    shadow="none"
    shape="xlg.bottom"
    state="hover"
    style={
      [
        {
          "minHeight": 15,
          "minWidth": 15,
        },
        {
          "position": "absolute",
        },
      ]
    }
    testId="test-id"
  >
    <svg
      color="#3695db"
      css={
        {
          "map": undefined,
          "name": "1qscsn4",
          "next": {
            "name": "animation-1xnn55h",
            "next": undefined,
            "styles": "@keyframes animation-1xnn55h{
    from {
        transform: rotate(0deg);
    }
  
    to {
        transform: rotate(720deg);
    }
}",
          },
          "styles": "
    animation: animation-1xnn55h 2s infinite;
",
          "toString": [Function],
        }
      }
      fill="currentColor"
      height={30}
      stroke="currentColor"
      strokeWidth="0"
      style={
        {
          "color": "#3695db",
        }
      }
      viewBox="0 0 16 16"
      width={30}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M13.917 7A6.002 6.002 0 0 0 2.083 7H1.071a7.002 7.002 0 0 1 13.858 0h-1.012z"
        fillRule="evenodd"
      />
    </svg>
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Icon renders ae96aec44 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="stretch"
    border="xlg.top"
    colors={
      {
        "bg": "transparent",
        "bgActive": "transparent",
        "bgHover": "transparent",
        "border": "bg.success",
        "borderActive": "bg.successminus",
        "borderHover": "bg.successplus",
        "text": "text.success",
        "textActive": "text.successminus",
        "textHover": "text.successplus",
      }
    }
    direction="column-reverse"
    events="auto"
    flex={2}
    href=""
    isDisabled={true}
    isHidden={true}
    justify="space-between"
    margin="5 15 3"
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={null}
    padding="5 15 3"
    shadow="lg"
    shape="rounded.top"
    state="active"
    style={
      [
        {
          "minHeight": 25,
          "minWidth": 25,
        },
        {
          "width": 100,
        },
      ]
    }
    testId=""
  >
    <test-mock
      color="#ed22c9"
      name="star"
      size={20}
      style={
        [
          {
            "lineHeight": 25,
            "minHeight": 25,
            "minWidth": 25,
            "textAlign": "center",
          },
          {
            "transform": [
              {
                "rotate": "45deg",
              },
            ],
          },
          null,
        ]
      }
    />
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;
